# citra

./: .gitignore  CMakeLists.txt
CMakeModules/: AndroidNdkModules.cmake
src/: CMakeLists.txt
src/citra/: default_ini.h
src/citra_android/jni/: CMakeLists.txt  button_manager.cpp  button_manager.h  config.cpp  config.h  default_ini.h  game_info.cpp  game_info.h  native.cpp  native.h
src/citra_android/jni/emu_window/: emu_window.cpp  emu_window.h
src/citra_android/jni/ndk_helper/: CMakeLists.txt  GLContext.cpp
src/common/: CMakeLists.txt  common_paths.h  file_util.cpp
src/common/logging/: text_formatter.cpp
src/core/: memory.h
src/input_common/: main.cpp
src/video_core/: video_core.cpp
src/video_core/renderer_opengl/: gl_rasterizer_cache.cpp  gl_shader_gen.cpp  gl_shader_util.cpp  gl_shader_util.h  gl_state.cpp  renderer_opengl.cpp
